--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <!-- saved from url=(0025)https://www.e-lavish.com/ -->
-<html lang="en" data-lt-installed="true">
-    <head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html lang="en" data-lt-installed="true"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
    <!-- Server: CF1 --><!-- Search: 16 -->    
    
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -34,9 +33,13 @@
       <meta name="twitter:site" content="">
    
 
-<link rel="stylesheet" href="./assets/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
 
+
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" >
+      
+      <!-- <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.13.0/css/all.css" integrity="sha384-IIED/eyOkM6ihtOiQsX2zizxFBphgnv1zbe1bKA+njdFzkr6cDNy16jfIKWu4FNH" crossorigin="anonymous"> -->
 
 <link rel="stylesheet" href="./assets/animate.min.css">
 
@@ -109,7 +112,7 @@
         
 
  </head>
- <body onload="" class=""  data-new-gr-c-s-check-loaded="14.1093.0" data-gr-ext-installed="">
+ <body onload="" class="" style="" data-new-gr-c-s-check-loaded="14.1093.0" data-gr-ext-installed="">
  
  
 
@@ -547,13 +550,13 @@ li.nav-item-dropdown > a:hover {
 
 <a class="d-none" id="popUpModal" href="https://www.e-lavish.com/localSite/content/popUpModal.cfm" data-target="#myModalHome" data-toggle="modal">Pop Up</a>
  
-
+<!-- 
 <script>
   window.setTimeout('clickit()',1000);
   function clickit(){
    $("#popUpModal").click()
   }
-</script>
+</script> -->
 
 <style>
  .modal {z-index:99999999999999998!important;text-align: center;
