--- a/index.html
+++ b/index.html
@@ -596,22 +596,22 @@ li.nav-item-dropdown > a:hover {
 
 <style>
  /*HOMEPAGE CATEGORIES*/
-#cat1  {background-image: url(/assets/1.JPG); background-position: center;background-size:cover;}
-#cat2  {background-image: url(/assets/2.JPG); background-position: center bottom;background-size:cover;} 
-#cat3  {background-image: url(/assets/3.JPG); background-position: center;background-size:cover;} 
-#cat4  {background-image: url(/assets/4.JPG); background-position: center;background-size:cover;} 
-#cat5  {background-image: url(/assets/5.JPG); background-position: center top;background-size:cover;} 
-#cat6  {background-image: url(/assets/6.JPG); background-position: center;background-size:cover;} 
-#cat7  {background-image: url(/assets/7.JPG); background-position: center;background-size:cover;} 
-#cat8  {background-image: url(/assets/8.JPG); background-position: center;background-size:cover;} 
-#cat9  {background-image: url(/assets/9.JPG); background-position: center;background-size:cover;} 
-#cat10  {background-image: url(/assets/10.JPG); background-position: center;background-size:cover;} 
-#cat11  {background-image: url(/assets/11.JPG); background-position: center;background-size:cover;} 
-#cat12  {background-image: url(/assets/12.JPG); background-position: center;background-size:cover;} 
-#cat13  {background-image: url(/assets/13.JPG); background-position: center;background-size:cover;} 
-#cat14  {background-image: url(/assets/14.JPG); background-position: center;background-size:cover;} 
-#cat15  {background-image: url(/assets/15.JPG); background-position: center;background-size:cover;} 
-#cat16  {background-image: url(/assets/16.JPG); background-position: center;background-size:cover;} 
+#cat1  {background-image: url(./assets/1.JPG); background-position: center;background-size:cover;}
+#cat2  {background-image: url(./assets/2.JPG); background-position: center bottom;background-size:cover;} 
+#cat3  {background-image: url(./assets/3.JPG); background-position: center;background-size:cover;} 
+#cat4  {background-image: url(./assets/4.JPG); background-position: center;background-size:cover;} 
+#cat5  {background-image: url(./assets/5.JPG); background-position: center top;background-size:cover;} 
+#cat6  {background-image: url(./assets/6.JPG); background-position: center;background-size:cover;} 
+#cat7  {background-image: url(./assets/7.JPG); background-position: center;background-size:cover;} 
+#cat8  {background-image: url(./assets/8.JPG); background-position: center;background-size:cover;} 
+#cat9  {background-image: url(./assets/9.JPG); background-position: center;background-size:cover;} 
+#cat10  {background-image: url(./assets/10.JPG); background-position: center;background-size:cover;} 
+#cat11  {background-image: url(./assets/11.JPG); background-position: center;background-size:cover;} 
+#cat12  {background-image: url(./assets/12.JPG); background-position: center;background-size:cover;} 
+#cat13  {background-image: url(./assets/13.JPG); background-position: center;background-size:cover;} 
+#cat14  {background-image: url(./assets/14.JPG); background-position: center;background-size:cover;} 
+#cat15  {background-image: url(./assets/15.JPG); background-position: center;background-size:cover;} 
+#cat16  {background-image: url(./assets/16.JPG); background-position: center;background-size:cover;}
 
 .column-wrapper {height:300px;}
 .one-full { float: none; }
