--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
 
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" >
       
-      <!-- <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.13.0/css/all.css" integrity="sha384-IIED/eyOkM6ihtOiQsX2zizxFBphgnv1zbe1bKA+njdFzkr6cDNy16jfIKWu4FNH" crossorigin="anonymous"> -->
+       <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.13.0/css/all.css" integrity="sha384-IIED/eyOkM6ihtOiQsX2zizxFBphgnv1zbe1bKA+njdFzkr6cDNy16jfIKWu4FNH" crossorigin="anonymous"> 
 
 <link rel="stylesheet" href="./assets/animate.min.css">
 
-<link rel="stylesheet" href="./assets/all.css" integrity="sha384-IIED/eyOkM6ihtOiQsX2zizxFBphgnv1zbe1bKA+njdFzkr6cDNy16jfIKWu4FNH" crossorigin="anonymous">
-
+<!--<link rel="stylesheet" href="./assets/all.css" integrity="sha384-IIED/eyOkM6ihtOiQsX2zizxFBphgnv1zbe1bKA+njdFzkr6cDNy16jfIKWu4FNH" crossorigin="anonymous">
+-->
 <link rel="stylesheet" type="text/css" href="./assets/hamburgers.min.css">
 <link rel="stylesheet" type="text/css" href="./assets/animsition.min.css">
 <link rel="stylesheet" type="text/css" href="./assets/main.css">
