--- a/index.html
+++ b/index.html
@@ -1123,7 +1123,7 @@
                         <p class="lead">Use the form below for Inquiry or submit a question or comment.</p>
 
                         <div class="mb-3"></div>
-                        <form data-toggle="validator" id="contactForm" class="hidden-print" name="contactForm" method="post" action="#!" onsubmit="return validateContactForm()" novalidate="true">
+                        <form data-toggle="validator" id="contactForm" class="hidden-print" name="contactForm" method="post" action="#" onsubmit="return validateContactForm()" novalidate="true">
                             <div class="row text-left">
                                 <div class="col-sm-6">
 
