--- a/kitchen.html
+++ b/kitchen.html
@@ -324,12 +324,12 @@
                     <div class="nav navbar-nav navbar-left">
                         <a class="navbar-brand navbar-right d-none d-lg-block d-xl-block" href="index.html"><i class="fa fa-home">&nbsp;</i></a>
                         <div class="nav-item">
-                            <a data-toggle="collapse" data-target="#id_1" href="bathroom.html">Bathroom</a>
-
+                            <a href="bathroom.html" >Bathroom</a>
+                            
                         </div>
                         <div class="nav-item">
-                            <a data-toggle="collapse" data-target="#id_2" href="kitchen.html">Kitchen</a>
-
+                            <a href="kitchen.html">Kitchen</a>
+                            
                         </div>
 
                         <li class="nav-item"><a href="index.html#inquiry">Contact A Lavish Specialist</a></li>
