--- a/Lavish-Showroom-Ardmore-PA-v1.html
+++ b/Lavish-Showroom-Ardmore-PA-v1.html
@@ -322,13 +322,13 @@
                 <div class="collapse navbar-collapse" id="MNBS4">
                     <div class="nav navbar-nav navbar-left">
                         <a class="navbar-brand navbar-right d-none d-lg-block d-xl-block" href="index.html"><i class="fa fa-home">&nbsp;</i></a>
-                        <div class="nav-item">
-                            <a data-toggle="collapse" data-target="#id_1" href="bathroom.html">Bathroom</a>
-
+                       <div class="nav-item">
+                            <a href="bathroom.html" >Bathroom</a>
+                            
                         </div>
                         <div class="nav-item">
-                            <a data-toggle="collapse" data-target="#id_2" href="kitchen.html">Kitchen</a>
-
+                            <a href="kitchen.html">Kitchen</a>
+                            
                         </div>
 
                         <li class="nav-item"><a href="index.html#inquiry">Contact A Lavish Specialist</a></li>
