--- a/index.html
+++ b/index.html
@@ -330,9 +330,9 @@
                             <a href="kitchen.html">Kitchen</a>
 
                         </div>
-
-                        <li class="nav-item"><a href="index.html#inquiry">Contact A Lavish Specialist</a></li>
-
+                        <ul>
+                            <li class="nav-item"><a href="index.html#inquiry">Contact A Lavish Specialist</a></li>
+                        </ul>
                     </div>
                     <div class="nav navbar-nav navbar-right">
                         <a href="#" class="navbar-link navbar-left text-white navbar-brand"><i class="fas fa-heart text-white" aria-hidden="true">&nbsp;</i>(<span id="cartCount">0</span>)</a>
@@ -976,13 +976,13 @@
 
                         </ul>
                     </div>
-                    <a href="#readMore" id="id-readMore" data-bs-toggle="collapse" aria-expanded="false" class="btn btn-secondary stretched-link mx-auto mt-auto">Read More</a>
+                    <a href="#readMore" id="id-readMore" data-bs-toggle="collapse" aria-expanded="false" class="btn btn-secondary stretched-link mx-auto mt-auto">View More</a>
                 </div>
 
             </div>
         </div>
 
-        </div>
+
     </section>
 
 
