--- a/about-us.html
+++ b/about-us.html
@@ -169,11 +169,11 @@
                         <div class="d-flex flex-column justify-content-end  flex-xl-grow-1">
                             <div class="ml-auto pl-xl-3">
 
-                                <a href="#"><i class="fa fa-user  d-none d-xl-inline-block">&nbsp;</i>Login</a>
+                                <!--<a href="#"><i class="fa fa-user  d-none d-xl-inline-block">&nbsp;</i>Login</a>
 
-                                &nbsp;&nbsp;|&nbsp;&nbsp;<a href="about-us.html">About</a>
+                                &nbsp;&nbsp;|-->&nbsp;&nbsp;<a href="about-us.html">About</a>
                                 &nbsp;&nbsp;|&nbsp;&nbsp;<a href="brands.html">Brands</a>
-                                &nbsp;&nbsp;|&nbsp;&nbsp;<a href="#">Blog</a>
+                                &nbsp;&nbsp;|&nbsp;&nbsp;<a href="blog.html">Blog</a>
 
                             </div>
                             <form id="search" action="#" method="post">
@@ -348,7 +348,7 @@
 
 
 
-        <section class="parallax0 mb-5" style="background-image: url(assets/parallax2.jpeg);color:#fff;">
+        <section class="parallax0 mb-5" style="background-image: url(assets/parallax2.jpg);color:#fff;">
             <div class="container pt-5 pb-5 text-center">
                 <h1 style="font-size:4em;" class="pt-5">This is LAVISH</h1>
                 <a class="btn btn-lg btn-light btn-cat scroll mt-5 mb-5" href="index.html#inquiry">Contact A Lavish Specialist</a>
@@ -453,11 +453,11 @@
                 <div class="w-100 d-lg-none d-xl-none"></div>
                 <ul class="list-inline list-pipe m-0">
                     <li class="list-inline-item">Site Powered By <a href="#" target="_blank">E-lavish bath and kitchen showroom</a>.</li>
-                    <li class="list-inline-item">
+                    <!--<li class="list-inline-item">
 
                         <a class="d-print-none" href="#">Login</a>
 
-                    </li>
+                    </li>-->
                 </ul>
             </div>
         </div>
