--- a/index.html
+++ b/index.html
@@ -168,11 +168,11 @@
                         <div class="d-flex flex-column justify-content-end  flex-xl-grow-1">
                             <div class="ml-auto pl-xl-3">
 
-                                <a href="#"><i class="fa fa-user  d-none d-xl-inline-block">&nbsp;</i>Login</a>
+                                <!--<a href="#"><i class="fa fa-user  d-none d-xl-inline-block">&nbsp;</i>Login</a>-->
 
-                                &nbsp;&nbsp;|&nbsp;&nbsp;<a href="about-us.html">About</a>
+                                &nbsp;&nbsp;<a href="about-us.html">About</a>
                                 &nbsp;&nbsp;|&nbsp;&nbsp;<a href="brands.html">Brands</a>
-                                &nbsp;&nbsp;|&nbsp;&nbsp;<a href="#">Blog</a>
+                                &nbsp;&nbsp;|&nbsp;&nbsp;<a href="blog.html">Blog</a>
 
                             </div>
                             <form id="search" action="#" method="post">
@@ -1143,11 +1143,11 @@
                 <div class="w-100 d-lg-none d-xl-none"></div>
                 <ul class="list-inline list-pipe m-0">
                     <li class="list-inline-item">Site Powered By <a href="#" target="_blank">E-lavish bath and kitchen showroom</a>.</li>
-                    <li class="list-inline-item">
+                    <!--<li class="list-inline-item">
 
                         <a class="d-print-none" href="#">Login</a>
 
-                    </li>
+                    </li>-->
                 </ul>
             </div>
         </div>
