--- a/index.html
+++ b/index.html
@@ -997,7 +997,7 @@
                         <!--<p class="lead">Use the form below for Inquiry or submit a question or comment.</p>-->
 
                         <div class="mb-3"></div>
-                        <form class="hidden-print" name="contactForm" method="post" action="https://formspree.io/f/npweb11o@gmail.com">
+                        <form class="hidden-print" name="contactForm" method="post" action="https://formspree.io/f/xdovayog">
                             <div class="row text-left">
                                 <div class="col-sm-6">
 
