--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <!-- saved from url=(0025)https://www.e-lavish.com/ -->
 <html lang="en" data-lt-installed="true">
@@ -8,11 +9,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-
-
-
-
-    <!---->
 
     <title>Kitchen and Bath Design Showroom Philadelphia PA</title>
     <link rel="shortcut icon" type="image/x-icon" href="https://www.e-lavish.com/favicon.ico">
@@ -997,7 +993,7 @@
                         <!--<p class="lead">Use the form below for Inquiry or submit a question or comment.</p>-->
 
                         <div class="mb-3"></div>
-                        <form class="hidden-print" name="contactForm" method="post" action="https://formspree.io/f/xdovayog">
+                        <form class="hidden-print" name="contactForm" method="post" action="#">
                             <div class="row text-left">
                                 <div class="col-sm-6">
 
@@ -1035,17 +1031,31 @@
 
 
                                     <!--<div class="form-group has-feedback required">
-                                        <label class="control-label" for="EMMailCheck"> Verification</label>
-                                        <input id="EMMailCheck" name="EMMailCheck" type="text" class="form-control" data-match="#verification" data-error="Must match the 6 digits from below image" placeholder="Enter the 6 digits from below image" required="" spellcheck="false" data-ms-editor="true" fdprocessedid="ofy8t8">
+            <label class="control-label" for="EMMailCheck"> Verification</label>
+            <input id="EMMailCheck" name="EMMailCheck" type="text" class="form-control" data-match="#verification" data-error="Must match the 6 digits from below image" placeholder="Enter the 6 digits from below image" required="" spellcheck="false" data-ms-editor="true" fdprocessedid="ofy8t8">
+            <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
+            <div class="help-block with-errors"></div>
+        </div>
+        <div class="form-group">
+            <img src="/CFFileServlet/_cf_captcha/_captcha_img-7687957760779621353.png" alt="" height="36" width="157">
+
+        </div>-->
+                                </div>
+
+                                <div class="col-sm-6">
+
+                                    <input type="hidden" id="verification" name="verification" value="244902">
+                                    <input type="hidden" name="sendEmail" value="1">
+                                    <div class="form-group required has-feedback">
+                                        <label class="control-label" for="name">Date</label>
+                                        <input name="date" id="date" class="form-control" type="datetime-local" data-error="Date & Time Required" value="" required="" fdprocessedid="b609c">
                                         <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
                                         <div class="help-block with-errors"></div>
                                     </div>
-                                    <div class="form-group">
-                                        <img src="/CFFileServlet/_cf_captcha/_captcha_img-7687957760779621353.png" alt="" height="36" width="157">
-
-                                    </div>-->
+                                  
                                 </div>
-                                <div class="col-sm-12">
+
+                                <div class="col-sm-6">
 
                                     <div class="form-group has-feedback required">
                                         <label class="control-label" for="message">Message</label>
