--- a/bathroom.html
+++ b/bathroom.html
@@ -155,7 +155,7 @@
 
 
                         <li class="list-inline-item"><a href="Lavish-Showroom-Ardmore-PA-v1.html">Location &amp; Hours</a></li>
-                        <li class="list-inline-item"><a href="#">Contact A Lavish Specialist</a></li>
+                        <li class="list-inline-item"><a href="index.html#inquiry">Contact A Lavish Specialist</a></li>
                     </ul>
 
 
@@ -332,13 +332,13 @@
                             
                         </div>
 
-                        <li class="nav-item"><a href="index.html#inquiry">Contact A Lavish Specialist</a></li>
+                        <div class="nav-item"><a href="index.html#inquiry">Contact A Lavish Specialist</a></div>
 
                     </div>
-                    <div class="nav navbar-nav navbar-right">
+                    <!--<div class="nav navbar-nav navbar-right">
                         <a href="#" class="navbar-link navbar-left text-white navbar-brand"><i class="fas fa-heart text-white" aria-hidden="true">&nbsp;</i>(<span id="cartCount">0</span>)</a>
 
-                    </div>
+                    </div>-->
                 </div>
             </div>
         </nav>
@@ -555,15 +555,15 @@
                         <li><strong>CUSTOMER SERVICE</strong></li>
                         <li><a href="about-us.html">About</a></li>
                         <li><a href="brands.html">Brands</a></li>
-                        <li><a href="#">Contact A Lavish Specialist</a></li>
-                        <li><a href="#">FAQ</a></li>
+                        <li><a href="index.html#inquiry">Contact A Lavish Specialist</a></li>
+                        <li><!--<a href="#">FAQ</a>--></li>
                         <!--<li><a href="#" target="_blank">Need More Plumbing Items</a></li>-->
                         <li><a href="index.html#inquiry">Help Center</a></li>
-                        <li><a href="#">Site Map</a></li>
+                        <li><!--<a href="#">Site Map</a>--></li>
                     </ul>
                     <ul class="mt-4">
                         <li><strong>CONNECT</strong></li>
-                        <li><a href="#" target="_blank" title="follow us on facebook"><span class="fab fa-facebook fa-2x" aria-hidden="true"></span></a>&nbsp;&nbsp;<a href="#" target="_blank" title="follow us on instagram"><span class="fab fa-instagram fa-2x" aria-hidden="true"></span></a></li>
+                        <li><a href="https://www.facebook.com/lavishardmore/" target="_blank" title="follow us on facebook"><span class="fab fa-facebook fa-2x" aria-hidden="true"></span></a>&nbsp;&nbsp;<a href="https://www.instagram.com/lavishardmore/" target="_blank" title="follow us on instagram"><span class="fab fa-instagram fa-2x" aria-hidden="true"></span></a></li>
 
                     </ul>
                 </div>
@@ -580,13 +580,13 @@
                         </li>
                         <li>Monday:&nbsp;Closed</li>
 
-                        <li>Tuesday:&nbsp;8:00 AM&nbsp;-&nbsp;5:00&nbsp;PM&nbsp;EST</li>
+                        <li>Tuesday:&nbsp;9:00 AM&nbsp;-&nbsp;5:00&nbsp;PM&nbsp;EST</li>
 
-                        <li>Wednesday:&nbsp;8:00 AM&nbsp;-&nbsp;5:00&nbsp;PM&nbsp;EST</li>
+                        <li>Wednesday:&nbsp;9:00 AM&nbsp;-&nbsp;5:00&nbsp;PM&nbsp;EST</li>
 
-                        <li>Thursday:&nbsp;8:00 AM&nbsp;-&nbsp;5:00&nbsp;PM&nbsp;EST</li>
+                        <li>Thursday:&nbsp;9:00 AM&nbsp;-&nbsp;5:00&nbsp;PM&nbsp;EST</li>
 
-                        <li>Friday:&nbsp;8:00 AM&nbsp;-&nbsp;5:00&nbsp;PM&nbsp;EST</li>
+                        <li>Friday:&nbsp;9:00 AM&nbsp;-&nbsp;5:00&nbsp;PM&nbsp;EST</li>
 
                         <li>Saturday:&nbsp;9:00 AM&nbsp;-&nbsp;2:00&nbsp;PM&nbsp;EST</li>
 
