--- a/terms-conditions.html
+++ b/terms-conditions.html
@@ -162,7 +162,7 @@
                     <div class="d-flex justify-content-between">
                         <div class="align-content-center pr-xl-3"><a href="index.html" class="logo"> <img src="./assets/logo.PNG"></a></div>
                         <div class="align-content-center px-3"><a href="index.html" class="logo"> <img src="./assets/lavish.PNG"></a></div>
-                        <div class="d-flex flex-column justify-content-end  flex-xl-grow-1">
+                        <div class="d-flex flex-column justify-content-start flex-xl-grow-1">
                             <div class="ml-auto pl-xl-3">
 
                                 <!--<a href="#"><i class="fa fa-user  d-none d-xl-inline-block">&nbsp;</i>Login</a>
@@ -172,13 +172,13 @@
                                 &nbsp;&nbsp;|&nbsp;&nbsp;<a href="blog.html">Blog</a>
 
                             </div>
-                            <form id="search" action="#" method="post">
+                            <!--<form id="search" action="#" method="post">
                                 <div class="search-product py-2 pl-4 d-flex align-content-center">
 
                                     <input class="mr-auto form-control align-content-center" type="text" name="S1" placeholder="Enter keyword or item number here" style="border:1px solid #eee;" fdprocessedid="oliyym">
                                     <button class="btn btn-primary ml-auto trans-0-4 align-content-center" fdprocessedid="osmpda">Search</button>
                                 </div>
-                            </form>
+                            </form>-->
                         </div>
 
 
@@ -485,10 +485,10 @@
                         <li><a href="about-us.html">About</a></li>
                         <li><a href="brands.html">Brands</a></li>
                         <li><a href="index.html#inquiry">Contact A Lavish Specialist</a></li>
-                        <li><a href="#"><!--FAQ--></a></li>
+                         <li><a href="privacy-policy.html">PRIVACY POLICY</a></li>
                         <!--<li><a href="#" target="_blank">Need More Plumbing Items</a></li>-->
                         <li><a href="index.html#inquiry">Help Center</a></li>
-                        <li><!--<a href="#">Site Map</a>--></li>
+                        <li><a href="terms-conditions.html">Terms & Conditions</a></li>
                     </ul>
                     <ul class="mt-4">
                         <li><strong>CONNECT</strong></li>
